--- a/Setup/Product.wxs
+++ b/Setup/Product.wxs
@@ -524,10 +524,10 @@
                     <RegistryValue Value="&quot;[INSTALLDIR]GitExtensions.exe&quot; %1" Type="string" />
                 </RegistryKey>
             </Component>
-            <Component Id="VS2015_VSIX" Guid="*">
+            <!--<Component Id="VS2015_VSIX" Guid="*">
                 <VSExtension:VsixPackage File="GitExtensionsVSIX.vsix" PackageId="GitExtensions..3166f76a-2b07-410a-a72a-509d6a2d146c" Target="community" TargetVersion="14.0" Vital="no" Permanent="no" />
                 <File Source="..\GitExtensionsVSIX\bin\$(var.Configuration)\GitExtensionsVSIX.vsix" />
-            </Component>
+            </Component>-->
         </DirectoryRef>
         <DirectoryRef Id="PluginsDir">
             <Component Id="DeleteUnusedBranches.dll" Guid="*">
@@ -1722,12 +1722,12 @@
             <Feature Id="AddToPath" Title="Add installation directory to PATH" Level="1">
                 <ComponentRef Id="Path" />
             </Feature>
-            <Feature Id="VSExtension" Title="Visual Studio extension" Level="1">
+            <!--<Feature Id="VSExtension" Title="Visual Studio extension" Level="1">
                 <Feature Id="VS2015FeatureId" Title="Visual Studio 2015/2017 integration" Level="1">
                     <Condition Level="2">NOT VS2015DEVENV</Condition>
                     <ComponentRef Id="VS2015_VSIX" />
                 </Feature>
-            </Feature>
+            </Feature>-->
             <Feature Id="Protocol.git" Title="Assign with git://-links" Level="1">
                 <ComponentRef Id="Protocol.git" />
             </Feature>
